Update index.html with Google Analyitics ID

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   <!-- Google Analytics (GA4) -->
-  <!-- REPLACE 'G-XXXXXXXXXX' WITH YOUR ACTUAL MEASUREMENT ID -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-JW0GVGZC89"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', 'G-JW0GVGZC89');
   </script> -->
 
   <title>Chase</title>
